<resources>
    <string name="app_name">H4bit</string>
    <string name="socialTab">Social</string>
    <string name="habitsTab">Habits</string>
    <string name="historyTab">history</string>
    <string name="newHabitButton">New Habit</string>
    <string name="searchHistoryButton">Search</string>
    <string name="signupButton">Sign up</string>
    <string name="loginButton">Log in</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="searchNameHint">Habit Name</string>
    <string name="searchComment">Habit Comment</string>
    <string name="createButton">Create</string>
    <string name="mondayToggle">Monday</string>
    <string name="sundayToggle">Sunday</string>
    <string name="habitComment">Comment</string>
    <string name="habitStartDate">Start Date</string>
    <string name="habitDate">Date</string>
    <string name="n_a">N/A</string>
    <string name="saveChanges" />
    <string name="edit_icon">edit_icon</string>
    <string name="missed">Missed</string>
    <string name="completed">Completed</string>
    <string name="next_date">Next Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="cancel">Cancel</string>
    <string name="do_habit">Do Habit</string>
    <string name="location_on">Location On</string>
    <string name="location_off">Location Off</string>
    <string name="comment_optional">Comment (Optional)</string>
    <string name="tue">Tue</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="wed">Wed</string>
    <string name="mon">Mon</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="comment">Comment</string>
    <string name="habit_name">Habit Name</string>
    <string name="map">Map</string>
    <string name="follow">Follow</string>
    <string name="image">image</string>
    <string name="send_request">Send Request</string>
    <string name="please_enter_the_name_of_the_user_you_would_like_to_follow">Please enter the name of the user you would like to follow.</string>
    <string name="map_nearby">Nearby</string>
</resources>
