<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="h4bit.h4bit.Views.CreateHabitActivity">

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/saveChanges"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/searchNameHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dateCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/habitDate"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <ToggleButton
        android:id="@+id/tuesdayToggle"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="ToggleButton"
        app:layout_constraintStart_toEndOf="@+id/mondayToggle"
        app:layout_constraintTop_toBottomOf="@+id/dateCalendar" />

    <ToggleButton
        android:id="@+id/thursdayToggle"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="ToggleButton"
        app:layout_constraintStart_toEndOf="@+id/wednesdayToggle"
        app:layout_constraintTop_toBottomOf="@+id/dateCalendar" />

    <ToggleButton
        android:id="@+id/fridaytoggle"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="ToggleButton"
        app:layout_constraintStart_toEndOf="@+id/thursdayToggle"
        app:layout_constraintTop_toBottomOf="@+id/dateCalendar" />

    <ToggleButton
        android:id="@+id/saturdayToggle"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:text="ToggleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tuesdayToggle" />

    <ToggleButton
        android:id="@+id/sundayToggle"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sundayToggle"
        android:textOff="@string/sundayToggle"
        android:textOn="@string/sundayToggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saturdayToggle"
        app:layout_constraintTop_toBottomOf="@+id/wednesdayToggle" />

    <ToggleButton
        android:id="@+id/wednesdayToggle"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="ToggleButton"
        app:layout_constraintStart_toEndOf="@+id/tuesdayToggle"
        app:layout_constraintTop_toBottomOf="@+id/dateCalendar" />

    <ToggleButton
        android:id="@+id/mondayToggle"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/mondayToggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateCalendar" />

    <EditText
        android:id="@+id/commentText"
        android:layout_width="353dp"
        android:layout_height="130dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/habitComment"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/createButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saturdayToggle" />

</android.support.constraint.ConstraintLayout>
